--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro e Consulta de Pessoas</title>
+    <title>Cadastro e Consulta de Pessoas  - Segurança</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,12 +62,12 @@
 </head>
 <body>
     <header>
-        <h1>Gestão de Pessoas</h1>
+        <h1>Gestão de Pessoas  - Segurança</h1>
     </header>
     <main>
         <!-- Formulário de Cadastro -->
         <section>
-            <h2>Cadastro de Pessoa - Seguranç</h2>
+            <h2>Cadastro de Pessoa</h2>
             <form action="/register" method="post" enctype="multipart/form-data">
                 <label for="name">Nome:</label>
                 <input type="text" id="name" name="name" required>
